<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:background="@drawable/monkey_party_back_512" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:id="@id/btnBack" android:background="@drawable/banana_back" android:layout_width="120.0dip" android:layout_height="60.0dip" android:layout_marginLeft="55.0dip" android:layout_marginBottom="25.0dip" android:layout_alignParentTop="true" android:onClick="onConnect">
            <requestFocus />
        </Button>
        <TextView android:textColor="#ffffff00" android:id="@id/txtView1" android:background="#ff008000" android:padding="5.0dip" android:layout_width="105.0dip" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/reporter" android:layout_below="@id/btnBack" />
        <TextView android:textColor="#ff000000" android:id="@id/txtReport" android:background="#ffffff00" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:hint="Reporting Callsign" android:singleLine="true" android:layout_toRightOf="@id/txtView1" android:layout_below="@id/btnBack" />
        <TextView android:textColor="#ffffff00" android:id="@id/txtView2" android:background="#ff008000" android:padding="5.0dip" android:layout_width="105.0dip" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/time_stamp" android:layout_below="@id/txtView1" />
        <TextView android:textColor="#ff000000" android:id="@id/txtTime" android:background="#ffffff00" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:hint="Time Stamp or Coordinate Position" android:singleLine="true" android:layout_toRightOf="@id/txtView2" android:layout_below="@id/txtReport" />
        <TextView android:textColor="#ffffff00" android:id="@id/txtView3" android:background="#ff008000" android:padding="5.0dip" android:layout_width="105.0dip" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/temp" android:layout_weight="1.0" android:layout_below="@id/txtView2" />
        <TextView android:textColor="#ff000000" android:id="@id/txtTemp" android:background="#ffffff00" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:hint="Temperature - Fahrenheit" android:singleLine="true" android:layout_toRightOf="@id/txtView3" android:layout_below="@id/txtTime" />
        <TextView android:textColor="#ffffff00" android:id="@id/txtView4" android:background="#ff008000" android:padding="5.0dip" android:layout_width="105.0dip" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/wind_gust" android:layout_below="@id/txtView3" />
        <TextView android:textColor="#ff000000" android:id="@id/txtWGust" android:background="#ffffff00" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:hint="Wind Gust (mph)" android:singleLine="true" android:layout_toRightOf="@id/txtView4" android:layout_below="@id/txtTemp" />
        <TextView android:textColor="#ffffff00" android:id="@id/txtView10" android:background="#ff008000" android:padding="5.0dip" android:layout_width="105.0dip" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/wind_spd" android:layout_below="@id/txtView4" />
        <TextView android:textColor="#ff000000" android:id="@id/txtWSpeed" android:background="#ffffff00" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:hint="Wind Speed (mph)" android:singleLine="true" android:layout_toRightOf="@id/txtView10" android:layout_below="@id/txtWGust" />
        <TextView android:textColor="#ffffff00" android:id="@id/txtView5" android:background="#ff008000" android:padding="5.0dip" android:layout_width="105.0dip" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/wind_dir" android:layout_below="@id/txtView10" />
        <TextView android:textColor="#ff000000" android:id="@id/txtWDirection" android:background="#ffffff00" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:hint="Wind Direction (degrees)" android:singleLine="true" android:layout_toRightOf="@id/txtView5" android:layout_below="@id/txtWSpeed" />
        <TextView android:textColor="#ffffff00" android:id="@id/txtView6" android:background="#ff008000" android:padding="5.0dip" android:layout_width="105.0dip" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/bar_press" android:layout_below="@id/txtView5" />
        <TextView android:textColor="#ff000000" android:id="@id/txtBPressure" android:background="#ffffff00" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:hint="Barometric Pressure" android:singleLine="true" android:layout_toRightOf="@id/txtView6" android:layout_below="@id/txtWDirection" />
        <TextView android:textColor="#ffffff00" android:id="@id/txtView7" android:background="#ff008000" android:padding="5.0dip" android:layout_width="105.0dip" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/humidity" android:layout_below="@id/txtView6" />
        <TextView android:textColor="#ff000000" android:id="@id/txtHumidity" android:background="#ffffff00" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:hint="Humidity (percentage)" android:singleLine="true" android:layout_toRightOf="@id/txtView7" android:layout_below="@id/txtBPressure" />
        <TextView android:textColor="#ffffff00" android:id="@id/txtView8" android:background="#ff008000" android:padding="5.0dip" android:layout_width="105.0dip" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/rain_hour" android:layout_below="@id/txtView7" />
        <TextView android:textColor="#ff000000" android:id="@id/txtRainHour" android:background="#ffffff00" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:hint="Rainfall Last Hour (1/100 inch)" android:singleLine="true" android:layout_toRightOf="@id/txtView8" android:layout_below="@id/txtHumidity" />
        <TextView android:textColor="#ffffff00" android:id="@id/txtView9" android:background="#ff008000" android:padding="5.0dip" android:layout_width="105.0dip" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/rain_midnight" android:layout_below="@id/txtView8" />
        <TextView android:textColor="#ff000000" android:id="@id/txtRainNight" android:background="#ffffff00" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="25.0dip" android:hint="Rainfall Since Midnight (1/100 inch)" android:singleLine="true" android:layout_toRightOf="@id/txtView9" android:layout_below="@id/txtRainHour" />
        <Button android:id="@id/btnConnect" android:background="@drawable/banana_connect" android:layout_width="120.0dip" android:layout_height="60.0dip" android:layout_marginRight="35.0dip" android:layout_below="@id/txtRainNight" android:onClick="onConnect" />
        <Button android:id="@id/btnCancel" android:background="@drawable/banana_cancel" android:layout_width="120.0dip" android:layout_height="60.0dip" android:layout_toRightOf="@id/btnConnect" android:layout_below="@id/txtRainNight" android:onClick="onConnect" />
        <ProgressBar android:id="@id/progBar" android:layout_width="128.0dip" android:layout_height="128.0dip" android:indeterminateDrawable="@drawable/monkey_show" android:layout_below="@id/btnCancel" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    </RelativeLayout>
</ScrollView>